# Presence

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
resources/macos/: Info.plist.template
resources/windows/: installer.iss
src/: core.rs  main.rs  messages.rs  state.rs  style.rs
