[package]
name = "presence"
version = "0.1.0"
edition = "2024"

[dependencies]
calamine = "0.26"
chrono = { version = "0.4", default-features = false, features = ["alloc", "clock"] }
csv = "1.3"
encoding_rs = "0.8"
genpdf = "0.2"
iced = { version = "0.12", features = ["canvas"] }
rfd = "0.15"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
tempfile = "3.2"
